--- a/restaurants/static/restaurants/profile.css
+++ b/restaurants/static/restaurants/profile.css
@@ -1,6 +1,9 @@
 .nav-links li:nth-of-type(2) a {
   text-decoration: underline;
 }
+.burger div {
+  background-color: white;
+}
 
 body {
   background-color: var(--GrayBackground);
@@ -13,7 +16,8 @@ body {
 .card {
   background-color: white;  
   margin-bottom: 2rem;
-  /* box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2); */
+  box-shadow: 0px 1px 5px 0px rgb(0 0 0 / 14%);
+    /* Edited from: https://boxshadows.com/presets */
 }
 
 .title {
