--- a/restaurants/static/restaurants/results.css
+++ b/restaurants/static/restaurants/results.css
@@ -10,15 +10,17 @@ a:visited {
 
 nav {
     /* box-shadow: 0px 1px 10px 1px lightgrey;     */
-    box-shadow: initial;
+    box-shadow: none;
     background-color: var(--Orange);
 }
 .nav-links a {
-    color: white;
+    color: grey;
 }
 .nav-links a:hover {
-    color: white;
-    text-decoration: underline;
+    color: var(--Orange);
+}
+.burger div {
+  background-color: white;
 }
 
 .flex-container {    
@@ -26,7 +28,7 @@ nav {
     flex-direction: column;
     align-items: center;    
         /* https://stackoverflow.com/questions/35106814/why-isnt-justify-content-centering-my-divs */
-    margin-top: var(--NavBarHeight);
+    margin-top: calc(var(--NavBarHeight) - 2px);
 }
 
 .title {
@@ -262,6 +264,14 @@ button:hover {
 
 
 @media only screen and (min-width: 768px) {
+    .nav-links a {
+        color: white;
+    }
+    .nav-links a:hover {
+        color: white;
+        text-decoration: underline;
+    }
+    
     .card {
         flex-direction: row;
     }
